--- a/test.html
+++ b/test.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git branch 테스트용</title>
+    <style>
+        span {
+            color: aqua;
+        }
+    </style>
 </head>
 <body>
     <h3>테스트용 제목</h3>
