--- a/test.html
+++ b/test.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git branch 테스트용</title>
     <style>
-        span {
-            color: aqua;
-        }
+        span {color: aqua;}
     </style>
 </head>
 <body>
