--- a/test.html
+++ b/test.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git branch 테스트용</title>
-    <style>
+        <style>
         span {
             color: aqua;
+        }
+        .git-header {
+            position: relative;
+        }
+
+        .git-header-sidemenu {
+            position: absolute;
+        }
+
+        .l {
+            right: 200px;
+        }
+
+        .s {
+            right: 100px;
         }
     </style>
 </head>
